--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -487,14 +487,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-7 {
   height: 1.75rem;
 }
-.h-screen {
-  height: 100vh;
-}
 .h-64 {
   height: 16rem;
 }
 .h-56 {
   height: 14rem;
+}
+.h-screen {
+  height: 100vh;
 }
 .h-1\/6 {
   height: 16.666667%;
@@ -619,9 +619,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .cursor-auto {
   cursor: auto;
 }
-.grid-cols-8 {
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -657,6 +654,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-evenly {
   justify-content: space-evenly;
+}
+.place-self-start {
+  place-self: start;
 }
 .place-self-end {
   place-self: end;
@@ -1087,7 +1087,15 @@ input{
 
 @media (min-width: 768px) {
 
+  .md\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:p-20 {
+    padding: 5rem;
   }
 }
